[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/pixel_side_scroller/entitys/star.gd" type="Script" id=1]
[ext_resource path="res://games/pixel_side_scroller/sounds/sfx/collect_star.wav" type="AudioStream" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="Star" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StarPolygon" type="Polygon2D" parent="."]
position = Vector2( -1, -1 )
color = Color( 1, 1, 0, 0.63 )
texture_scale = Vector2( 2, 2 )
polygon = PackedVector2Array( 0, 0, 0.476818, -1.43046, 1, -3, 2, 0, 5, 1, 2, 2, 1, 5, 0, 2, -3, 1 )

[node name="CollectStar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Star_body_entered"]
